# ocsigen-ppx-rpc

./: .ocamlformat  README.md  dune-project  ocsigen-ppx-rpc.opam
src/: dune  ppx_rpc.ml
test/: dune
test/errors.t/: missing_annot.ml  no_param.ml  no_param_myid.ml  run.t
test/impl.t/: impl.ml  labels.ml  myid.ml  newtype.ml  run.t  unit.ml
