opam-version: "2.0"
authors: "dev@ocsigen.org"
maintainer: "dev@ocsigen.org"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/ocsigen/ocsigen-ppx-rpc/"
bug-reports: "https://github.com/ocsigen/ocsigen-ppx-rpc/issues"
dev-repo: "git+https://github.com/ocsigen/ocsigen-ppx-rpc.git"
synopsis: "This PPX adds a syntax for RPCs for Eliom and Ocsigen Start"

version: "1.1"

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune" {>= "2.8"}
  "ppxlib" {>= "0.36.0"}
  "ppx_optcomp"
]
