(executable
 (name run_ppx)
 (modules run_ppx)
 (libraries ppxlib ppx_rpc))

(env
 (_
  (binaries
   (./run_ppx.exe as run_ppx))))

; Cram tests are only enabled starting OCaml 5.3 because the PPX output changes
; significantly
(cram
 (enabled_if
  (>= %{ocaml_version} 5.3))
 (deps %{bin:run_ppx}))
